feat(dropdown): show status and tooltip on item

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,10 +6,13 @@
     <!--Normal version-->
     <div class="e-bg-white">
       <elvia-dropdown
-        label="testing something"
+        label="Residing country"
         [value]="selectedDropdownItem"
         [items]="dropdownItems"
         isMulti="true"
+        hasSelectAllOption="true"
+        isSearchable="true"
+        placeholder="Select country"
       ></elvia-dropdown>
     </div>
     <!--Inverted version-->
