--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
@@ -26,6 +26,7 @@ pre {
 
   .top-menu {
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     width: 100%;
