--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,15 +4,18 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
+    <div class="e-bg-white" style="max-width: 270px">
       <elvia-dropdown
         label="Residing country"
-        [value]="selectedDropdownItem"
         [items]="dropdownItems"
         isMulti="true"
+        isCompact="false"
         hasSelectAllOption="true"
-        isSearchable="true"
+        isSearchable="false"
         placeholder="Select country"
+        hasLoadMoreItemsButton="false"
+        [isLoadingMoreItems]="isLoadingMoreItems"
+        (onLoadMoreItems)="setLoading()"
       ></elvia-dropdown>
     </div>
     <!--Inverted version-->
