Lego 2018 percy fjerne percy tester for deprecatede komponenter (#1101)
* Remove Percy tests that test deprecated classes

* add e-link--shortcut to deprecated classes

* Update Elvis to 9.5.0

--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -111,6 +111,7 @@
     <div class="e-title-xs e-my-16">Compact</div>
     <div class="e-table-container">
       <table class="e-table e-table--compact">
+        <caption class="e-sr-only">Example Table1</caption>
         <thead>
           <tr>
             <th scope="col">Periode</th>
@@ -245,44 +246,11 @@
       </table>
     </div>
 
-    <div class="e-title-xs e-my-16">Sorting</div>
-    <div class="e-table-container">
-      <table class="e-table" aria-label="Beskrivelse av tabellen">
-        <thead>
-          <tr>
-            <th scope="col" class="e-table__sort-header">
-              Periode
-              <span class="e-table__sort-icon e-table__sort-icon--inactive">
-                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
-                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
-              </span>
-            </th>
-            <th scope="col" class="e-table__sort-header">
-              Beløp
-              <span class="e-table__sort-icon e-table__sort-icon--up">
-                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
-                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
-              </span>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Januar 2020</th>
-            <td>567,98 kr</td>
-          </tr>
-          <tr>
-            <th scope="row">Februar 2020</th>
-            <td>543,10 kr</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
     <div class="e-title-xs e-my-16">Alignment</div>
 
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table2</caption>
         <thead>
           <tr>
             <th scope="col" class="e-text-left">Text left</th>
@@ -305,6 +273,7 @@
     <div class="e-title-xs e-my-16">Long Column</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table3</caption>
         <thead>
           <tr>
             <th scope="col">Periode</th>
@@ -357,6 +326,7 @@
     <div class="e-title-xs e-my-16">Footnote</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table4</caption>
         <thead>
           <tr>
             <th scope="col">Periode*</th>
@@ -386,6 +356,7 @@
     <div class="e-title-xs e-my-16">Input</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table5</caption>
         <thead>
           <tr>
             <th scope="col">Address</th>
@@ -416,6 +387,7 @@
     <div class="e-title-xs e-my-16">Buttons</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table6</caption>
         <thead>
           <tr>
             <th scope="col">Address</th>
@@ -428,10 +400,10 @@
             <td>Elvia Elviaveien 3, 1234 Oslo</td>
             <td>15.01.2021</td>
             <td class="e-table__button">
-              <button class="e-btn e-btn--icon">
+              <button aria-label="example button1" class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
-              <button class="e-btn e-btn--icon">
+              <button aria-label="example button2" class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--bin" aria-hidden="true"></i></span>
               </button>
             </td>
@@ -440,10 +412,10 @@
             <td>Elvia Elviaveien 3, 1234 Oslo</td>
             <td>15.01.2021</td>
             <td class="e-table__button">
-              <button class="e-btn e-btn--icon">
+              <button aria-label="example button3" class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
-              <button class="e-btn e-btn--icon">
+              <button aria-label="example button4" class="e-btn e-btn--icon">
                 <span class="e-btn__icon"><i class="e-icon e-icon--bin" aria-hidden="true"></i></span>
               </button>
             </td>
@@ -455,6 +427,7 @@
     <div class="e-title-xs e-my-16">Select</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table7</caption>
         <thead>
           <tr class="e-table__select">
             <th scope="col">
@@ -495,6 +468,7 @@
     <div class="e-title-xs e-my-16">Link</div>
     <div class="e-table-container">
       <table class="e-table">
+        <caption class="e-sr-only">Example Table8</caption>
         <thead>
           <tr>
             <th scope="col">Address</th>
