feat(dropdown): add keyboard navigation with extra list buttons

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -13,7 +13,7 @@
         hasSelectAllOption="true"
         isSearchable="false"
         placeholder="Select country"
-        hasLoadMoreItemsButton="false"
+        hasLoadMoreItemsButton="true"
         [isLoadingMoreItems]="isLoadingMoreItems"
         (onLoadMoreItems)="setLoading()"
       ></elvia-dropdown>
