--- a/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
@@ -2,29 +2,34 @@
 
 <div class="component-section documentation-section-animation elvis-anchor">
   <div class="component-section__title" id="{{ sectionTitle }}">
-    <span class="e-tooltip" tabindex="0" (click)="copyAnchor()">
-      <span class="icons">
-        <img
-          class="component-section__img normal-img"
-          alt="Copy anchor button"
-          src="assets/hyperlink-3.svg"
-        />
-        <img
-          class="component-section__img green-img"
-          alt="Copy anchor button"
-          src="assets/hyperlink-3-green.svg"
-        />
-      </span>
-      <h2 class="e-title-md elvis-anchor-title e-mb-24" style="display: flex">
-        {{ sectionTitle }}
-        <span *ngIf="figmaOnly" class="e-ml-16">
-          <label class="e-tag e-tag--orange">Figma only</label>
+    <app-copy
+      tabindex="0"
+      (click)="copyAnchor()"
+      style="position: absolute; height: 24px; left: -36px; width: 36px"
+    >
+      <ng-container ngProjectAs="copyContent">
+        <span class="icons">
+          <img
+            class="component-section__img normal-img"
+            alt="Copy anchor button"
+            src="assets/hyperlink-3.svg"
+          />
+          <img
+            class="component-section__img green-img"
+            alt="Copy anchor button"
+            src="assets/hyperlink-3-green.svg"
+          />
         </span>
-        <ng-content select="headerIcon"></ng-content>
-      </h2>
+      </ng-container>
+    </app-copy>
+    <h2 class="e-title-md elvis-anchor-title e-mb-24" style="display: flex">
+      {{ sectionTitle }}
+      <span *ngIf="figmaOnly" class="e-ml-16">
+        <label class="e-tag e-tag--orange">Figma only</label>
+      </span>
+      <ng-content select="headerIcon"></ng-content>
+    </h2>
 
-      <span class="e-tooltip__content">Copied!</span>
-    </span>
     <span class="e-ml-16" *ngIf="propertiesClass !== ''">
       <app-copy [message]="propertiesClass">
         <ng-container ngProjectAs="copyContent">
