--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -129,40 +129,29 @@ $pageIndentedMargin: 72px;
   }
 
   &__title {
+    position: relative;
     display: flex;
     align-items: center;
     border-bottom: 1px solid var(--e-black);
 
-    .e-tooltip {
-      .e-tooltip__content {
-        display: none;
-        left: -24px;
-        margin-bottom: -4px;
-      }
-      &:hover .icons .normal-img {
-        display: flex;
-      }
+    &:hover .icons .normal-img {
+      display: block;
     }
+
     .icons {
+      display: inline-block;
       cursor: pointer;
       position: relative;
+      height: 24px;
+      width: 36px;
       .cms-section__img {
         display: none;
         position: absolute;
-        top: 9px;
-        left: -36px;
         padding-right: 12px;
       }
     }
-    &.anchor-copied .e-tooltip .e-tooltip__content {
-      display: flex;
-      opacity: 1;
-      left: -24px;
-      margin-bottom: -4px;
-    }
     &.anchor-copied .icons .green-img {
-      display: flex;
-      opacity: 1;
+      display: block;
     }
     &.anchor-copied .icons .normal-img {
       display: none;
