add custom ClassName styles to RadioFilter
These styles can be removed once the actual Radio Filter component has its styles updated. The Radio Filter does not match Figma as of today, and therefore, manual adjustments were made.

--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -418,3 +418,14 @@ $pageIndentedMargin: 72px;
     }
   }
 }
+
+/* Used by the Elvia-radio-filter component on the Icons docs page. 
+TODO: Update Radio Filter component styles and remove this custom CSS */
+.icons-doc-radio-filter {
+  gap: 8px;
+
+  label[class^='styledComponents__RadioFilterLabel'] {
+    white-space: nowrap;
+    margin: 0;
+  }
+}
