--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
@@ -25,51 +25,16 @@ $maxIconContainerMobile: 450px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 16px;
+    flex-wrap: wrap;
+
     .e-form-field {
       width: 280px;
       margin-top: -28px;
     }
-    .e-radio-filter-container {
-      display: flex;
-    }
+
     .dark-mode-toggle {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .e-toggle {
-        margin-left: 8px;
-      }
-    }
-    .dark-mode-toggle.mobile {
-      display: none;
-    }
-    @media (max-width: 1260px) {
-      align-items: center;
-      flex-wrap: wrap;
-      .e-form-field {
-        margin-right: 24px;
-        margin-top: -28px + 16px;
-      }
-      .e-radio-filter-container {
-        margin-top: 16px;
-        flex: 1 1 350px;
-      }
-      .dark-mode-toggle {
-        display: none;
-      }
-      .dark-mode-toggle.mobile {
-        margin-top: 16px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        flex: 1 1 10%;
-      }
-    }
-    @include breakpoints.breakpoint-up(Mobile) {
-      .e-form-field {
-        width: 100%;
-        margin-right: 0;
-      }
+      margin-left: auto;
     }
   }
 
