chore(dropdown): fix misc bugs

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -11,9 +11,9 @@
         isMulti="true"
         isCompact="false"
         hasSelectAllOption="true"
-        isSearchable="false"
+        isSearchable="true"
         placeholder="Select country"
-        hasLoadMoreItemsButton="true"
+        hasLoadMoreItemsButton="false"
         [isLoadingMoreItems]="isLoadingMoreItems"
         (onLoadMoreItems)="setLoading()"
       ></elvia-dropdown>
