--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,8 +4,9 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white" style="max-width: 270px">
+    <div class="e-bg-white">
       <elvia-dropdown
+        isDisabled="false"
         label="Residing country"
         [items]="dropdownItems"
         isMulti="true"
@@ -14,6 +15,7 @@
         isSearchable="true"
         placeholder="Select country"
         hasLoadMoreItemsButton="false"
+        isFullWidth="false"
         [isLoadingMoreItems]="isLoadingMoreItems"
         (onLoadMoreItems)="setLoading()"
       ></elvia-dropdown>
