--- a/packages/web/src/app/shell/home/home.component.scss
+++ b/packages/web/src/app/shell/home/home.component.scss
@@ -316,67 +316,28 @@
   justify-content: center;
   margin-top: calc(7% + 16px);
   margin-bottom: 40px;
+  gap: 56px;
   .card-link {
-    display: flex;
+    aspect-ratio: 1 / 1;
     width: 154px;
-    height: 154px;
-    margin: 0 28px;
-    .e-link__content .e-link__icon {
-      position: relative;
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-      img[class*='shortcut-off'] {
-        visibility: visible;
-      }
-      img[class*='shortcut-on'] {
-        visibility: hidden;
-        transition: visibility;
-      }
-    }
-    :hover {
-      .e-link__content .e-link__icon {
-        img[class*='shortcut-off'] {
-          visibility: hidden;
-          transition: visibility 0.2s;
-        }
-        img[class*='shortcut-on'] {
-          visibility: visible;
-          transition-delay: 0.2s;
-        }
-      }
-    }
+    max-width: 250px;
   }
   @include breakpoints.breakpoint-up(Tablet) {
     margin-top: 80px;
-    .card-link {
-      margin: 0 16px;
-    }
+    gap: 32px;
   }
   @include breakpoints.breakpoint-up(Mobile) {
     margin-top: 72px;
     flex-wrap: wrap;
+    gap: 16px;
+
     .card-link {
-      margin: 8px;
       flex: 0 calc(40% - (32px));
-      height: calc(40% - (32px));
-      .e-link__description {
-        display: none;
-      }
-      img {
-        transform: scale(1.3);
-      }
     }
   }
   @media (max-width: 500px) {
     .card-link {
       flex: 0 calc(50% - (32px));
-      height: calc(50% - (32px));
-      img {
-        transform: scale(1.1);
-      }
     }
   }
 }
