remove border from home page cards

--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -122,7 +122,7 @@
             <elvia-card
               [description]="!isMobileScreenWidth ? page.description : null"
               [heading]="page.title"
-              [hasBorder]="true"
+              [hasBorder]="false"
             >
               <img slot="icon" src="{{ page.imageUrl }}" alt="" aria-hidden="true" />
               <div slot="iconHover">
