docs(dropdown): fix react demo

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,7 +9,7 @@
         isDisabled="false"
         label="Residing country"
         [items]="dropdownItems"
-        isMulti="true"
+        isMulti="false"
         isCompact="false"
         hasSelectAllOption="true"
         isSearchable="true"
