--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -14,9 +14,11 @@
       <div *ngIf="typeOptions.length !== 0 && !typesData" class="ceg-dropdown">
         <elvia-dropdown
           [items]="typeOptions"
-          [value]="typeOptions[defaultType]"
+          [value]="typeOptions[defaultType].value"
           label="Type"
-          (valueOnChange)="updateFormStates('type', $event); updateSelectedType($event)"
+          (valueOnChange)="
+            updateFormStates('type', typeOptions, $event); updateSelectedType($event, typeOptions)
+          "
         ></elvia-dropdown>
       </div>
       <div *ngIf="iconsOptions.length !== 0 && !typesData" class="ceg-dropdown ceg-dropdown-icon">
@@ -24,23 +26,29 @@
           [items]="iconsOptions"
           [value]="defaultIcon"
           label="Icon name"
-          (valueOnChange)="updateFormStates('name', $event); updateSelectedType($event, true)"
+          (valueOnChange)="
+            updateFormStates('name', iconsOptions, $event); updateSelectedType($event, iconsOptions, true)
+          "
         ></elvia-dropdown>
       </div>
       <div *ngIf="typesData && typesData.length !== 0" class="ceg-dropdown">
         <elvia-dropdown
           [items]="typeOptions"
-          [value]="typeOptions[0]"
+          [value]="typeOptions[0].value"
           label="Type"
-          (valueOnChange)="updateFormStates('type', $event); updateSelectedTypeCustom($event)"
+          (valueOnChange)="
+            updateFormStates('type', typeOptions, $event); updateSelectedTypeCustom($event, typeOptions)
+          "
         ></elvia-dropdown>
       </div>
       <div *ngIf="bgOptions.length !== 0" class="ceg-dropdown">
         <elvia-dropdown
           [items]="bgOptions"
-          [value]="bgOptions[defaultBg]"
+          [value]="bgOptions[defaultBg].value"
           label="Background"
-          (valueOnChange)="updateFormStates(bgObj.propName, $event); updateSelectedBg($event)"
+          (valueOnChange)="
+            updateFormStates(bgObj.propName, bgOptions, $event); updateSelectedBg($event, bgOptions)
+          "
         ></elvia-dropdown>
       </div>
     </div>
