--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -146,9 +146,8 @@ p {
     }
   }
   .illustration-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
 
     @include breakpoints.breakpoint-up(Mobile) {
       display: none;
@@ -224,19 +223,18 @@ p {
   line-height: 32px;
   display: flex;
   flex-direction: row;
+  column-gap: 24px;
   @include breakpoints.breakpoint-up(Mobile) {
     flex-direction: column;
+    row-gap: 16px;
   }
 }
 
 .changelog-date {
-  vertical-align: top;
-  padding-right: 24px;
   width: 27%;
   display: flex;
   flex-direction: column;
   .changelog-date-span {
-    margin-top: -32px;
     color: var(--e-grey-80);
   }
   @-moz-document url-prefix() {
@@ -246,23 +244,16 @@ p {
   }
   @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
-    .changelog-date-span {
-      margin-top: -32px;
-    }
   }
 }
 
 .changelog-content {
-  // padding-top: 48px;
+  display: flex;
+  row-gap: 32px;
+  flex-direction: column;
   width: 75%;
   @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
-    //padding-top: 0px;
-    //margin-top: -20px;
-  }
-
-  .changelog-section:not(:first-of-type) {
-    margin-top: 32px;
   }
 
   .changelog-section-title {
