--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,7 +4,43 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white" style="display: flex; gap: 32px; flex-wrap: wrap">
+      <elvia-dropdown
+        [inlineStyle]="{ maxWidth: '280px' }"
+        label="Standard"
+        [items]="dropdownItems"
+      ></elvia-dropdown>
+      <elvia-dropdown
+        [inlineStyle]="{ maxWidth: '280px' }"
+        isDisabled="true"
+        label="Disabled"
+        [items]="dropdownItems"
+      ></elvia-dropdown>
+      <elvia-dropdown
+        [inlineStyle]="{ maxWidth: '280px' }"
+        label="Searchable"
+        [items]="dropdownItems"
+        isSearchable="true"
+      ></elvia-dropdown>
+      <elvia-dropdown
+        [inlineStyle]="{ maxWidth: '280px' }"
+        label="Compact"
+        [items]="dropdownItems"
+        isCompact="true"
+      ></elvia-dropdown>
+      <elvia-dropdown
+        [inlineStyle]="{ maxWidth: '280px' }"
+        label="Multi"
+        [items]="dropdownItems"
+        isMulti="true"
+        hasSelectAllOption="true"
+        placeholder="Select country"
+        hasLoadMoreItemsButton="false"
+        [isLoadingMoreItems]="isLoadingMoreItems"
+        (onLoadMoreItems)="setLoading()"
+      ></elvia-dropdown>
+      <elvia-dropdown label="Full width" [items]="dropdownItems" isFullWidth="true"></elvia-dropdown>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -184,7 +220,7 @@
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
-    <elvia-datepicker [value]="date"></elvia-datepicker>
+    <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
   <!--Date range picker-->
   <div class="example-wrapper">
@@ -207,13 +243,6 @@
   <!--Dropdown-->
   <div class="example-wrapper">
     <h3>Dropdown</h3>
-    <elvia-dropdown
-      [isCompact]="false"
-      [isDisabled]="false"
-      label="testing something"
-      [value]="dropdownDefOptions"
-      [items]="dropdownOptions"
-    ></elvia-dropdown>
   </div>
 
   <!--Icon-->
